# lenskit-docs

./: .buildinfo  .editorconfig  .gitignore  GettingStarted.html  LICENSE  README.md  _headers  _redirects  addons.html  algorithms.html  basic.html  batch.html  bias.html  build-site.ts  catalogs.html  checkout-versions.ts  clean-rtd-html.ts  copy-docs.ts  crossfold.html  data.html  datasets.html  deno.json  diagnostics.html  documenting.html  eslint.config.js  examples.html  genindex.html  headers  hpf.html  impl-tips.html  implicit.html  index.html  install.html  interfaces.html  internals.html  justfile  knn.html  math.html  matrix.html  mf.html  (+23 more)
.doctrees/: catalogs.doctree  index.doctree  references.doctree  todo.doctree
_static/: documentation_options.js  documentation_options.js?v=39fa19e0  readthedocs-data.js  searchtools.js
addons/: hpf.html  implicit.html  index.html
api/: batch.html  config.html  data-types.html  data.html  diagnostics.html  index.html  lenskit._accel.html  lenskit.algorithms.als.common.html  lenskit.algorithms.als.explicit.html  lenskit.algorithms.als.html  lenskit.algorithms.als.implicit.html  lenskit.algorithms.basic.html  lenskit.algorithms.bias.html  lenskit.algorithms.html  lenskit.algorithms.knn.html  lenskit.algorithms.knn.item.html  lenskit.algorithms.knn.user.html  lenskit.algorithms.mf_common.html  lenskit.algorithms.ranking.html  lenskit.algorithms.svd.html  lenskit.als.html  lenskit.basic.bias.html  lenskit.basic.candidates.html  lenskit.basic.composite.html  lenskit.basic.history.html  lenskit.basic.html  lenskit.batch.html  (+147 more)
(+372 files in other folders)
