[build-system]
requires = ["uv_build ~=0.9.5"]
build-backend = "uv_build"

[project]
name = "lenskit-docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dulwich>=0.24.7",
    "packaging>=25.0",
]

[tool.uv.build-backend]
module-name = "lkdoc"
module-root = ""

[dependency-groups]
dev = [
    "ruff>=0.14.2",
]
